@@ -27,6 +27,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Show an error message on Linux under Wayland when attempting to pick a color from the screen with a hint to use Xorg instead. Thanks Meru and Phoneme for reporting.
  * Fix: Remove pick from screen button in the browser, since it doesn't work there.
  * Fix: Don't enter fullscreen in the browser when reopening the main window. Thanks Bluestrings for reporting.
+ * Feature: Skip the username selection when reconnecting to a session in the browser using a drawpile.net account. It now automatically picks the same username again as it does on other platforms.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
